[package]
name = "flxp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
serde = "1.0.159"
serde_derive = "1.0.159"
reqwest = { version = "0.11.16", features = ["blocking","multipart"] }
tokio = { version = "1", features = ["full"] }
